native/include/alexandria_ffi.h

/**
 * UC-41 AF-01/AF-02: the request conflicts with existing state — the
 * active auth mode is not local, or an account already exists. The FFI
 * counterpart of HTTP's `409`.
 */
#define AUTH_ERR_CONFLICT 10
/**
 * Result of `alexandria_collection_create` (UC-10). On success `status` is
 * `COLLECTION_OK` and `json` is a NUL-terminated JSON string of the
 * `Collection` body — byte-for-byte the same shape HTTP returns from
 * `POST /v1/collections` (FR-FC-24 / NFR-09). On failure `json` is NULL and
 * `status` carries the mapped error code. The caller must free `json` with
 * `alexandria_free_string`.
 */
typedef struct CollectionJsonResult {
  int status;
  char *json;
} CollectionJsonResult;
/**
 * Result of `alexandria_bookmark_create` (UC-15). On success `status` is
 * `BOOKMARK_OK` and `json` is a NUL-terminated JSON string of the `Bookmark`
 * body — byte-for-byte the same shape HTTP returns from `POST
 * /v1/bookmarks` (FR-FC-24 / NFR-09). On failure `json` is NULL and `status`
 * carries the mapped error code. The caller must free `json` with
 * `alexandria_free_string`.
 */
typedef struct BookmarkJsonResult {
  int status;
  char *json;
} BookmarkJsonResult;
/**
 * Result of `alexandria_auth_local_login` / `alexandria_auth_local_set_credentials`
 * (UC-34/UC-35). On success `status` is `AUTH_OK` and `json` is a
 * NUL-terminated JSON string of the `LocalLoginResult` /
 * `LocalCredentialsResult` body — byte-for-byte the same shape HTTP
 * returns from the matching `/v1/auth/local/*` endpoint (FR-FC-24 /
 * NFR-09). On failure `json` is NULL and `status` carries the mapped
 * error code. The caller must free `json` with `alexandria_free_string`.
 */
typedef struct AuthJsonResult {
  int status;
  char *json;
} AuthJsonResult;
/**
 * Add items to a collection (UC-13 / FR-CO-05).
 *
 * `uuid` is the collection's public UUID (NUL-terminated string). `json_body`
 * is the JSON body HTTP would send (`itemUuids`). The function deserializes
 * it, calls the same `AddItemsToCollectionHandler` the HTTP route uses, and
 * on success serializes the returned `CollectionItemsResult` back to JSON —
 * so the FFI and HTTP surfaces agree byte-for-byte modulo key ordering
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct CollectionJsonResult alexandria_collection_add_items(const char *uuid,
                                                            const char *json_body,
                                                            const char *token);
/**
 * Create a browser bookmark, optionally in an existing bookmark collection
 * (UC-15 / FR-BM-01).
 *
 * `json_body` is the JSON body HTTP would send (`url` + `title` +
 * `collectionUuid`). The function deserializes it, calls the same
 * `CreateBookmarkHandler` the HTTP route uses, and on success serializes the
 * returned `Bookmark` back to JSON — so the FFI and HTTP surfaces agree
 * byte-for-byte modulo key ordering (parity, FR-FC-24 / NFR-09). `token` is
 * the bearer auth token.
 */
struct BookmarkJsonResult alexandria_bookmark_create(const char *json_body, const char *token);
/**
 * Update a bookmark's url, title, and containing collection (UC-16 /
 * FR-BM-02).
 *
 * `uuid` is the bookmark's public UUID (NUL-terminated string). `json_body`
 * is the JSON body HTTP would send (`url` + `title` + `collectionUuid`).
 * The function deserializes it, calls the same `UpdateBookmarkHandler` the
 * HTTP route uses, and on success serializes the returned `Bookmark` back
 * to JSON — so the FFI and HTTP surfaces agree byte-for-byte modulo key
 * ordering (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct BookmarkJsonResult alexandria_bookmark_update(const char *uuid,
                                                     const char *json_body,
                                                     const char *token);
/**
 * Browse bookmarks, optionally filtered by containing collection (UC-17 /
 * FR-BM-06).
 *
 * `json_filters` is a JSON string `{"collectionUuid":"…","state":"all"}`
 * (empty string or NULL for defaults). The function deserializes it, calls
 * the same `BrowseBookmarksHandler` the HTTP route uses, and on success
 * serializes the returned `Vec<Bookmark>` back to a JSON array — so the FFI
 * and HTTP surfaces agree byte-for-byte modulo key ordering (parity,
 * FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct BookmarkJsonResult alexandria_bookmarks_list(const char *json_filters, const char *token);
/**
 * Soft-delete a bookmark (UC-18 / FR-BM-03).
 *
 * `uuid` is the bookmark's public UUID (NUL-terminated string). On success
 * `json` carries the updated `Bookmark` — byte-for-byte the same shape HTTP
 * returns from `DELETE /v1/bookmarks/{uuid}` (parity, FR-FC-24 / NFR-09).
 * `token` is the bearer auth token.
 */
struct BookmarkJsonResult alexandria_bookmark_soft_delete(const char *uuid, const char *token);
/**
 * Restore a soft-deleted bookmark (UC-18 / FR-BM-05).
 *
 * `uuid` is the bookmark's public UUID (NUL-terminated string). On success
 * `json` carries the restored `Bookmark` — byte-for-byte the same shape
 * HTTP returns from `POST /v1/bookmarks/{uuid}/restore` (parity,
 * FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct BookmarkJsonResult alexandria_bookmark_restore(const char *uuid, const char *token);
/**
 * Hard-purge a bookmark (UC-19 / FR-BM-04).
 *
 * `uuid` is the bookmark's public UUID (NUL-terminated string). On success
 * `json` carries the pre-purge `Bookmark` as confirmation — byte-for-byte
 * the same shape HTTP returns from `DELETE /v1/bookmarks/{uuid}?purge=true`
 * (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
 */
struct BookmarkJsonResult alexandria_bookmark_purge(const char *uuid, const char *token);
/**
 * Local login (UC-34 / FR-AU-04): verify email + password and create a
 * session. `json_body` is the JSON body HTTP would send (`email`,
 * `password`). On success `json` carries the `LocalLoginResult` — the
 * caller presents its `sessionId` on subsequent requests instead of a
 * bearer token in local mode.
 *
 * Deliberately takes no `token`: this is how a caller obtains credentials
 * in the first place (mirrors the HTTP route being outside the auth gate).
 */
struct AuthJsonResult alexandria_auth_local_login(const char *json_body);
/**
 * Set or change local-login credentials (UC-35 / FR-AU-05, FR-AU-06).
 * `json_body` is the JSON body HTTP would send (`email`, `password`).
 * `token` is required: this changes existing credentials. Creating the
 * account is `alexandria_auth_local_register` (UC-41).
 */
struct AuthJsonResult alexandria_auth_local_set_credentials(const char *json_body,
                                                            const char *token);
/**
 * Register the local account (UC-41 / FR-AU-10, FR-AU-11): create the
 * single owner's credentials and open a session. `json_body` is the JSON
 * body HTTP would send (`email`, `password`, `passwordConfirmation`). On
 * success `json` carries the `LocalRegisterResult`, whose `sessionId` the
 * caller presents on subsequent requests.
 *
 * Deliberately takes no `token`: there is nothing to authenticate with
 * before an account exists. Succeeds only once — a second call returns
 * `AUTH_ERR_CONFLICT` (AF-02).
 */
struct AuthJsonResult alexandria_auth_local_register(const char *json_body);