lib/core/bindings/alexandria_bindings.dart

// Generated by ffigen from native/include/alexandria_ffi.h — do not edit.
// See IR-03 in docs/requirements/Operations & Infrastructure Document.md.
//
// ignore_for_file: type=lint, unused_field, camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

/// Generated bindings over the Alexandria core's C ABI.
///
/// DO NOT EDIT. Generated from native/include/alexandria_ffi.h by ffigen.
///
class AlexandriaBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AlexandriaBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AlexandriaBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Local login (UC-34 / FR-AU-04): verify email + password and create a
  /// session. `json_body` is the JSON body HTTP would send (`email`,
  /// `password`). On success `json` carries the `LocalLoginResult` — the
  /// caller presents its `sessionId` on subsequent requests instead of a
  /// bearer token in local mode.
  ///
  /// Deliberately takes no `token`: this is how a caller obtains credentials
  /// in the first place (mirrors the HTTP route being outside the auth gate).
  AuthJsonResult alexandria_auth_local_login(ffi.Pointer<ffi.Char> json_body) {
    return _alexandria_auth_local_login(json_body);
  }

  late final _alexandria_auth_local_loginPtr =
      _lookup<
        ffi.NativeFunction<AuthJsonResult Function(ffi.Pointer<ffi.Char>)>
      >('alexandria_auth_local_login');
  late final _alexandria_auth_local_login = _alexandria_auth_local_loginPtr
      .asFunction<AuthJsonResult Function(ffi.Pointer<ffi.Char>)>();

  /// Register the local account (UC-41 / FR-AU-10, FR-AU-11): create the
  /// single owner's credentials and open a session. `json_body` is the JSON
  /// body HTTP would send (`email`, `password`, `passwordConfirmation`). On
  /// success `json` carries the `LocalRegisterResult`, whose `sessionId` the
  /// caller presents on subsequent requests.
  ///
  /// Deliberately takes no `token`: there is nothing to authenticate with
  /// before an account exists. Succeeds only once — a second call returns
  /// `AUTH_ERR_CONFLICT` (AF-02).
  AuthJsonResult alexandria_auth_local_register(
    ffi.Pointer<ffi.Char> json_body,
  ) {
    return _alexandria_auth_local_register(json_body);
  }

  late final _alexandria_auth_local_registerPtr =
      _lookup<
        ffi.NativeFunction<AuthJsonResult Function(ffi.Pointer<ffi.Char>)>
      >('alexandria_auth_local_register');
  late final _alexandria_auth_local_register =
      _alexandria_auth_local_registerPtr
          .asFunction<AuthJsonResult Function(ffi.Pointer<ffi.Char>)>();

  /// Set or change local-login credentials (UC-35 / FR-AU-05, FR-AU-06).
  /// `json_body` is the JSON body HTTP would send (`email`, `password`).
  /// `token` is required: this changes existing credentials. Creating the
  /// account is `alexandria_auth_local_register` (UC-41).
  AuthJsonResult alexandria_auth_local_set_credentials(
    ffi.Pointer<ffi.Char> json_body,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_auth_local_set_credentials(json_body, token);
  }

  late final _alexandria_auth_local_set_credentialsPtr =
      _lookup<
        ffi.NativeFunction<
          AuthJsonResult Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)
        >
      >('alexandria_auth_local_set_credentials');
  late final _alexandria_auth_local_set_credentials =
      _alexandria_auth_local_set_credentialsPtr
          .asFunction<
            AuthJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// Create a browser bookmark, optionally in an existing bookmark collection
  /// (UC-15 / FR-BM-01).
  ///
  /// `json_body` is the JSON body HTTP would send (`url` + `title` +
  /// `collectionUuid`). The function deserializes it, calls the same
  /// `CreateBookmarkHandler` the HTTP route uses, and on success serializes the
  /// returned `Bookmark` back to JSON — so the FFI and HTTP surfaces agree
  /// byte-for-byte modulo key ordering (parity, FR-FC-24 / NFR-09). `token` is
  /// the bearer auth token.
  BookmarkJsonResult alexandria_bookmark_create(
    ffi.Pointer<ffi.Char> json_body,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_bookmark_create(json_body, token);
  }

  late final _alexandria_bookmark_createPtr =
      _lookup<
        ffi.NativeFunction<
          BookmarkJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_bookmark_create');
  late final _alexandria_bookmark_create = _alexandria_bookmark_createPtr
      .asFunction<
        BookmarkJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Hard-purge a bookmark (UC-19 / FR-BM-04).
  ///
  /// `uuid` is the bookmark's public UUID (NUL-terminated string). On success
  /// `json` carries the pre-purge `Bookmark` as confirmation — byte-for-byte
  /// the same shape HTTP returns from `DELETE /v1/bookmarks/{uuid}?purge=true`
  /// (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  BookmarkJsonResult alexandria_bookmark_purge(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_bookmark_purge(uuid, token);
  }

  late final _alexandria_bookmark_purgePtr =
      _lookup<
        ffi.NativeFunction<
          BookmarkJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_bookmark_purge');
  late final _alexandria_bookmark_purge = _alexandria_bookmark_purgePtr
      .asFunction<
        BookmarkJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Restore a soft-deleted bookmark (UC-18 / FR-BM-05).
  ///
  /// `uuid` is the bookmark's public UUID (NUL-terminated string). On success
  /// `json` carries the restored `Bookmark` — byte-for-byte the same shape
  /// HTTP returns from `POST /v1/bookmarks/{uuid}/restore` (parity,
  /// FR-FC-24 / NFR-09). `token` is the bearer auth token.
  BookmarkJsonResult alexandria_bookmark_restore(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_bookmark_restore(uuid, token);
  }

  late final _alexandria_bookmark_restorePtr =
      _lookup<
        ffi.NativeFunction<
          BookmarkJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_bookmark_restore');
  late final _alexandria_bookmark_restore = _alexandria_bookmark_restorePtr
      .asFunction<
        BookmarkJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Soft-delete a bookmark (UC-18 / FR-BM-03).
  ///
  /// `uuid` is the bookmark's public UUID (NUL-terminated string). On success
  /// `json` carries the updated `Bookmark` — byte-for-byte the same shape HTTP
  /// returns from `DELETE /v1/bookmarks/{uuid}` (parity, FR-FC-24 / NFR-09).
  /// `token` is the bearer auth token.
  BookmarkJsonResult alexandria_bookmark_soft_delete(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_bookmark_soft_delete(uuid, token);
  }

  late final _alexandria_bookmark_soft_deletePtr =
      _lookup<
        ffi.NativeFunction<
          BookmarkJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_bookmark_soft_delete');
  late final _alexandria_bookmark_soft_delete =
      _alexandria_bookmark_soft_deletePtr
          .asFunction<
            BookmarkJsonResult Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  /// Update a bookmark's url, title, and containing collection (UC-16 /
  /// FR-BM-02).
  ///
  /// `uuid` is the bookmark's public UUID (NUL-terminated string). `json_body`
  /// is the JSON body HTTP would send (`url` + `title` + `collectionUuid`).
  /// The function deserializes it, calls the same `UpdateBookmarkHandler` the
  /// HTTP route uses, and on success serializes the returned `Bookmark` back
  /// to JSON — so the FFI and HTTP surfaces agree byte-for-byte modulo key
  /// ordering (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  BookmarkJsonResult alexandria_bookmark_update(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> json_body,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_bookmark_update(uuid, json_body, token);
  }

  late final _alexandria_bookmark_updatePtr =
      _lookup<
        ffi.NativeFunction<
          BookmarkJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_bookmark_update');
  late final _alexandria_bookmark_update = _alexandria_bookmark_updatePtr
      .asFunction<
        BookmarkJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Browse bookmarks, optionally filtered by containing collection (UC-17 /
  /// FR-BM-06).
  ///
  /// `json_filters` is a JSON string `{"collectionUuid":"…","state":"all"}`
  /// (empty string or NULL for defaults). The function deserializes it, calls
  /// the same `BrowseBookmarksHandler` the HTTP route uses, and on success
  /// serializes the returned `Vec<Bookmark>` back to a JSON array — so the FFI
  /// and HTTP surfaces agree byte-for-byte modulo key ordering (parity,
  /// FR-FC-24 / NFR-09). `token` is the bearer auth token.
  BookmarkJsonResult alexandria_bookmarks_list(
    ffi.Pointer<ffi.Char> json_filters,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_bookmarks_list(json_filters, token);
  }

  late final _alexandria_bookmarks_listPtr =
      _lookup<
        ffi.NativeFunction<
          BookmarkJsonResult Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('alexandria_bookmarks_list');
  late final _alexandria_bookmarks_list = _alexandria_bookmarks_listPtr
      .asFunction<
        BookmarkJsonResult Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// Add items to a collection (UC-13 / FR-CO-05).
  ///
  /// `uuid` is the collection's public UUID (NUL-terminated string). `json_body`
  /// is the JSON body HTTP would send (`itemUuids`). The function deserializes
  /// it, calls the same `AddItemsToCollectionHandler` the HTTP route uses, and
  /// on success serializes the returned `CollectionItemsResult` back to JSON —
  /// so the FFI and HTTP surfaces agree byte-for-byte modulo key ordering
  /// (parity, FR-FC-24 / NFR-09). `token` is the bearer auth token.
  CollectionJsonResult alexandria_collection_add_items(
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> json_body,
    ffi.Pointer<ffi.Char> token,
  ) {
    return _alexandria_collection_add_items(uuid, json_body, token);
  }
